# NukeStudio-ProjectCreator

./: .gitignore  HieroProjectLite.hrox  README.md  guide.md  pyproject.toml  reference.hrox  schema.json  test.py
.github/: copilot-instructions.md
hrox_generator/: __init__.py  cli.py  ffprobe.py  generator.py  schema.py
hrox_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nuke_kitsu_loader/: README.md  __init__.py  plugin.py
nuke_kitsu_loader/configs/: plugin_config.json
nuke_kitsu_loader/core/: __init__.py  cert_utils.py  debug.py  kitsu_client.py  loader.py  utils.py
nuke_kitsu_loader/tests/: cert_utils.py  hiro_test.py  pattern.py  test_kitsu.py  test_kitsu_client.py  test_utils.py
nuke_kitsu_loader/ui/: __init__.py  actions.py  login_widget.py  main_widget.py  sequence_card.py
tests/: test_ffprobe.py  test_generator.py  test_schema.py
