[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrox-generator"
version = "0.1.0"
description = "Programmatic Hiero/Nuke Studio .hrox project generator"
authors = [{name = "NukeStudio Automation"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "lxml>=4.9",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
hroxgen = "hrox_generator.cli:main"
